--- a/css/style.css
+++ b/css/style.css
@@ -542,6 +542,7 @@ a:hover {
 }
 
 i.fab {
+  color: #000;
   font-size: 1.1rem;
 }
 
@@ -1642,6 +1643,10 @@ svg {
   transition-delay: 0.4s;
 }
 
+.hide {
+  display: none;
+}
+
 /* SideBar */
 .msb {
   width: 200px;
@@ -1775,7 +1780,6 @@ a:hover {
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
-
 body.msb-x .mcw, body.msb-x .mnb {
   margin-left: 0;
   -moz-animation: bodyslideout 300ms forwards;
