refined card responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ a {
 /* Colors variables
     ==================================================*/
 @media (max-width: 767px) {
+  .card {
+    border: none !important;
+  }
   .contact-number {
     justify-content: space-around;
   }
