--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,11 @@ a {
 /* Colors variables
     ==================================================*/
 @media (max-width: 767px) {
+  .about-hero {
+    margin: auto !important;
+    padding: 1rem !important;
+  }
   .about-content {
-    text-align: center;
     padding: 50px !important;
   }
   .header__wrapper {
