--- a/css/style.css
+++ b/css/style.css
@@ -1326,7 +1326,7 @@ svg {
   border: 0;
   border-bottom: 2px solid #9ae933;
   color: #323233;
-  font-family: "Prata";
+  font-family: "Poppins", sans-serif;
   font-size: 1rem;
   -webkit-transition: 0.3s;
   transition: 0.3s;
@@ -1337,7 +1337,7 @@ svg {
 }
 
 .footer__copyright {
-  font-family: "Prata";
+  font-family: "Poppins", sans-serif;
   margin-top: 4rem;
   font-size: 0.9rem;
   color: #4e4c4c;
@@ -1359,7 +1359,7 @@ svg {
   background-color: #131316;
   padding: 3rem;
   color: #F7F7F7;
-  font-family: "Prata";
+  font-family: "Poppins", sans-serif;
 }
 
 .popup_window form {
