--- a/css/style.css
+++ b/css/style.css
@@ -426,7 +426,7 @@ a:hover {
 }
 
 .about-content {
-  padding: 30px 150px 30px 0;
+  padding: 0 150px 30px 0;
 }
 
 .about-content p {
@@ -538,7 +538,7 @@ a:hover {
   width: 100vw;
   height: 100vh;
   background: rgb(255,255,255);
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0.788) 0%, rgba(255, 255, 255, 0.427) 22%, rgba(255,255,255,0) 100%);
+  background: linear-gradient(0, rgb(255, 255, 255) 0%, rgba(255, 255, 255, 0.427) 22%, rgba(255,255,255,0) 100%);
 }
 
 .promo__wrapper {
@@ -565,6 +565,10 @@ a:hover {
 i.fab {
   color: #000;
   font-size: 1.1rem;
+}
+i.fab:hover {
+  color: #8FE421;
+  cursor: pointer;
 }
 
 .sidebar-socials {
@@ -614,7 +618,6 @@ i.fab {
   letter-spacing: 1px;
   display: inline-block;
   padding: 5px 15px 0 15px;
-  
   font-family: sans-serif !important;
   top: 3rem;
 }
@@ -625,7 +628,7 @@ i.fab {
 .link:hover {
   text-decoration: none;
   color: #F7F7F7 !important;
-  background: rgb(31, 155, 68);
+  background: #8fe421;
 }
 
 .features {
@@ -933,7 +936,7 @@ svg {
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: #ed1c24;
+  background-color: #8FE421;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -1182,12 +1185,15 @@ svg {
   position: absolute;
   bottom: 0;
   left: 0;
-  background-color: #ed1c24;
+  background-color: #8FE421;
 }
 
 .feedback .slide-img {
   width: 100px;
   height: 100px;
+}
+
+.slide-img img {
   border-radius: 100%;
 }
 
@@ -1209,6 +1215,10 @@ svg {
   font-family: "PT Sans Caption";
   font-size: 1rem;
   text-align: justify;
+}
+
+.service-number {
+  font-size: 2rem;
 }
 
 .footer {
@@ -1313,9 +1323,12 @@ svg {
 .footer__socials a {
   margin: 1rem;
   font-size: 1.5rem;
-  color: #363636;
   -webkit-transition: 0.3s;
   transition: 0.3s;
+}
+.footer__socials a:hover {
+  color: #8FE421 !important;
+  cursor: pointer;
 }
 
 .footer__socials a:hover {
@@ -1673,9 +1686,18 @@ svg {
   transition: all 0.3s ease-in-out;
 }
 .btn-primary {
-  background: #a5e453 !important;
+  background: #8fe421 !important;
   color: #fff !important;
+  border: none;
+  text-transform: uppercase;
+  font-size: 13px;
+  padding: 10px;
 }
+
+.btn-primary:hover {
+  background: #70b31a !important;
+}
+
 .card__collection .cards--two__rect:before {
   content: "";
   display: block;
@@ -1735,7 +1757,7 @@ svg {
 .msb .navbar {
   border: none;
   margin-left: 0;
-  background-color: inherit;
+  background-color: rgba(255, 255, 255, 0.466);
 }
 .msb .navbar-header {
   width: 100%;
@@ -1753,6 +1775,7 @@ svg {
   display: block;
   width: 100%;
 }
+
 .msb .navbar-nav li a {
   padding: 15px;
   color: #5f5f5f;
