--- a/css/style.css
+++ b/css/style.css
@@ -447,10 +447,13 @@ a:hover {
   width: 100vw;
   padding: 50px;
   position: fixed;
+  transition: ease-in-out 500ms;
+
 }
 .header.scrolled {
   background-color: #fff !important;
   transition: background-color 500ms linear;
+  transition: ease-in-out 500ms;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   padding: 20px;
   z-index: 20;
@@ -1354,7 +1357,7 @@ svg {
   width: 150px;
   background: none;
   border: 0;
-  border-bottom: 2px solid #9ae933;
+  border-bottom: 2px solid #8FE421;
   color: #323233;
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
@@ -1406,7 +1409,7 @@ svg {
   margin-top: 2rem;
   background: none;
   border: 0;
-  border-bottom: 2px solid #ed1c24;
+  border-bottom: 2px solid #8FE421;
   font-size: 1.2rem;
   color: #F7F7F7;
 }
